# biblio-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SMART_AGENT_SUMMARY.md  alembic.ini  debug_chitchat.py  demo_smart_agent.py  docker-compose.dev.yml  docker-compose.yml  env.example  fly.toml  ingest.py  init-db.sql  pyproject.toml  test_conversation_modes.py  test_db_connection.py  test_ingestion.py  test_smart_agent.py
.github/workflows/: fly-deploy.yml
backend/: __init__.py  cli.py  config.py  database.py  models.py
backend/api/: __init__.py  routes.py
backend/rag/: __init__.py  engine.py  intent.py  metadata_labels.py  schemas.py  smart_engine.py
backend/rag/agent/: __init__.py  config.py  react_agent.py  smart_agent.py
backend/rag/guardrails/: __init__.py  citation.py  errors.py  policy.py  token_utils.py
backend/rag/prompt/: __init__.py  builder.py  loader.py
backend/rag/prompt/templates/: README.md  intent_classifier.txt  smart_agent_finalizer.txt  smart_agent_router.txt  smart_agent_synthesis.txt  smart_agent_system.txt  system_prompt_inline.txt
backend/services/: conversation_service.py  csv_parser.py  embedding_service.py  ingestion_service.py  retrieval_service.py  text_chunker.py
docs/: Application_Implementation.md  Frontend_Usage_Guide.md  Implementation_Plan.md  MacOS_Setup_Guide.md  PRD.md  Phase_3_RAG_Core_Completion_Plan.md  Prompt_Builder_Design_Notes.md  TODO.md  architecture.md  getting-started.md  improvement_plan.md  next_steps.md  user-guide.md
frontend/: README.md  __init__.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ChatHeader.tsx  ChatInputBar.tsx  ErrorBanner.tsx  MessageBubble.tsx  MessagesPane.tsx  SourcesSidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx
infra/: __init__.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_batchstatus_enum.py  0003_documentclass_enum.py  9d594567a8b3_add_chat_session_and_message_tables.py
tests/: cli_sync_test.py  conftest.py  test_csv_parser.py  test_guardrails.py  test_models.py  test_prompt_builder.py  test_react_agent.py  test_retrieval.py
